finish And check

--- a/extent-report.html
+++ b/extent-report.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2023-04-11 19:55:34</span>
+					<span class='suite-started-time'>2023-04-12 18:37:55</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 57s+508ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 23s+780ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 57s+508ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 23s+780ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2023-04-11 19:54:37</span> 
+							<span class='panel-lead suite-started-time'>2023-04-12 18:37:32</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2023-04-11 19:55:34</span> 
+							<span class='panel-lead suite-ended-time'>2023-04-12 18:37:55</span> 
 						</div> 
 					</div>
 				</div>
@@ -238,7 +238,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active unknown ' extentid='882692fa-a629-474c-b851-07c9e4f75855'>
+										<li class='collection-item test displayed active unknown ' extentid='75189e2c-a09c-4dae-bdad-c98fc99c8499'>
 											<div class='test-head'>
 												<span class='test-name'>Ready To start </span>
 												<span class='test-status label right outline capitalize unknown'>unknown</span>
@@ -246,9 +246,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-11 19:54:37</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-04-11 19:55:34</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 57s+71ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-12 18:37:32</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -263,6 +263,62 @@
 															</tr>
 														</thead>
 														<tbody>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='988abdbd-4f8d-43e8-9ebe-0041b026fd06'>
+											<div class='test-head'>
+												<span class='test-name'>Test01:Register_to_Buyme </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-12 18:37:50</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-04-12 18:37:55</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 5s+71ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																	<th>StepName</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>18:37:50</td>
+																		<td class='step-name'>Test started</td>
+																	<td class='step-details'>Details:Test01:Register_to_Buyme</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>18:37:51</td>
+																		<td class='step-name'>Step 2</td>
+																	<td class='step-details'>Fill in registration details</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>18:37:55</td>
+																	<td class='step-details'>Test is successful</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>18:37:55</td>
+																		<td class='step-name'>Test Passed</td>
+																	<td class='step-details'><a href='C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/Test01 Register to Buyme.png' data-featherlight='image'><img class='report-img' src='file:///C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/Test01 Register to Buyme.png' /></a></td>
+																</tr>
 														</tbody>
 													</table>
 													<ul class='collapsible node-list' data-collapsible='accordion'>
