--- a/extent-report.html
+++ b/extent-report.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2023-04-12 18:37:55</span>
+					<span class='suite-started-time'>2023-04-19 11:18:58</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 23s+780ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 47s+274ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 23s+780ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 47s+274ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2023-04-12 18:37:32</span> 
+							<span class='panel-lead suite-started-time'>2023-04-19 11:18:10</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2023-04-12 18:37:55</span> 
+							<span class='panel-lead suite-ended-time'>2023-04-19 11:18:58</span> 
 						</div> 
 					</div>
 				</div>
@@ -238,7 +238,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active unknown ' extentid='75189e2c-a09c-4dae-bdad-c98fc99c8499'>
+										<li class='collection-item test displayed active unknown ' extentid='1cdecc00-c61f-41e4-8542-2f3e67141f9d'>
 											<div class='test-head'>
 												<span class='test-name'>Ready To start </span>
 												<span class='test-status label right outline capitalize unknown'>unknown</span>
@@ -246,7 +246,7 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-12 18:37:32</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-19 11:18:11</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -270,17 +270,17 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='988abdbd-4f8d-43e8-9ebe-0041b026fd06'>
+										<li class='collection-item test displayed active pass ' extentid='c7855129-8fd9-44fb-91a7-c5af9b5d34c1'>
 											<div class='test-head'>
-												<span class='test-name'>Test01:Register_to_Buyme </span>
+												<span class='test-name'>test00:dot EXTRA </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-12 18:37:50</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-04-12 18:37:55</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 5s+71ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-19 11:18:19</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -298,26 +298,120 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:37:50</td>
+																	<td class='timestamp'>11:18:19</td>
 																		<td class='step-name'>Test started</td>
-																	<td class='step-details'>Details:Test01:Register_to_Buyme</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:37:51</td>
-																		<td class='step-name'>Step 2</td>
-																	<td class='step-details'>Fill in registration details</td>
+																	<td class='step-details'>Details:test00 Loading dot EXTRA</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:37:55</td>
+																	<td class='timestamp'>11:18:23</td>
 																	<td class='step-details'>Test is successful</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:37:55</td>
+																	<td class='timestamp'>11:18:23</td>
 																		<td class='step-name'>Test Passed</td>
-																	<td class='step-details'><a href='C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/Test01 Register to Buyme.png' data-featherlight='image'><img class='report-img' src='file:///C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/Test01 Register to Buyme.png' /></a></td>
+																	<td class='step-details'><a href='C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/test00 Loading dot EXTRA.png' data-featherlight='image'><img class='report-img' src='file:///C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/test00 Loading dot EXTRA.png' /></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='e22a4c08-717c-4398-a162-9912ccadedb2'>
+											<div class='test-head'>
+												<span class='test-name'>test01:Color To Who SEND Extra </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-19 11:18:23</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																	<th>StepName</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:18:23</td>
+																		<td class='step-name'>Test started</td>
+																	<td class='step-details'>Details:test01:Color To Who SEND Extra</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>11:18:50</td>
+																	<td class='step-details'>Test is successful</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>11:18:50</td>
+																		<td class='step-name'>Test Passed</td>
+																	<td class='step-details'><a href='C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/test01 Color To Who SEND Extra.png' data-featherlight='image'><img class='report-img' src='file:///C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/test01 Color To Who SEND Extra.png' /></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='7cfcf4f1-dbec-4113-967d-a8672adb6521'>
+											<div class='test-head'>
+												<span class='test-name'>test02 Extra </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-04-19 11:18:50</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-04-19 11:18:57</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 7s+325ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																	<th>StepName</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:18:50</td>
+																		<td class='step-name'>Test started</td>
+																	<td class='step-details'>Details:test02</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>11:18:57</td>
+																	<td class='step-details'>Test is successful</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>11:18:57</td>
+																		<td class='step-name'>Test Passed</td>
+																	<td class='step-details'><a href='C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/test02.png' data-featherlight='image'><img class='report-img' src='file:///C:/Users/power play/IdeaProjects/Final_Ex_AutomationCorse/TestScreenShots/test02.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
